@@ -1,11 +1,18 @@
 plugins {
     kotlin("jvm") version "1.9.24"
+    kotlin("plugin.serialization") version "1.9.24"
     application
+    id("org.openjfx.javafxplugin") version "0.1.0"
     id("org.jlleitschuh.gradle.ktlint") version "12.1.1"
 }
 
+javafx {
+    version = "21"
+    modules("javafx.controls", "javafx.fxml")
+}
+
 ktlint {
-    version.set("1.3.0") // Рекомендуется указывать версию явно
+    version.set("1.3.0")
 }
 group = "edu.battleship"
 version = "1.0.0"
@@ -17,6 +24,9 @@ repositories {
 dependencies {
     // Kotlin
     implementation(kotlin("stdlib"))
+
+    // Serialization
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
 
     // JUnit 5
     testImplementation(platform("org.junit:junit-bom:5.10.2"))
@@ -30,6 +40,12 @@ tasks.test {
 
 application {
     mainClass.set("edu.battleship.MainKt")
+    applicationDefaultJvmArgs =
+        listOf(
+            "--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED",
+            "-Dprism.verbose=false",
+            "-Djavafx.verbose=false",
+        )
 }
 
 kotlin {
